# Thermott

./: LICENSE  README.md  vetur.config.js
client/: .eslintignore  .eslintrc.js  components.d.ts  cypress.json  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.js  vue.config.js
client/cypress/: utils.ts
client/cypress/fixtures/: 20210222_VP.json  20210405_sample.json  SampleData_AgilentMxPro.txt  SampleData_AppliedBiosystemsSDS.txt  SampleData_BioradCFX.txt  SampleData_RotorGeneQ_datasheet_transposed.csv
client/cypress/integration/: appbar_spec.ts  bindingFitTab_spec.ts  rawDataTab_spec.ts  sessionFileCompatability_spec.ts  tutorial_spec.ts
client/cypress/plugins/: index.js
client/src/: App.vue  global.css  main.ts  models.ts  store.ts
client/src/plugins/: vuetify.ts
client/src/router/: index.ts
client/src/utils/: api.ts  api_hub.ts  bindingexperiment_manager.ts  chartjs-plugin-afterdraw.ts  chartjs-plugin-range-select.ts  localStorage.ts  (+5 more)
documentation/: guide.txt  mkdocs.yml
documentation/docs/: 01rawdata.md  02experimentinfo.md  03fitbinding.md  04dataacquisition.md  05troubleshooting.md  06citation.md  index.md
server/: main.py  main_debug.py  pyproject.toml
server/app/: metrics.py
server/app/analysis/: binding_fit.py  parameter_prediction.py  raw_data_parse.py
server/app/analysis/tm_model_analysis/: __init__.py  main.py
server/app/analysis/tm_model_analysis/models/: boltzmann_trans.py  derivative.py  derivative_sovgal.py  sigmoid5_trans.py  thermodynamic.py
server/app/api/: api.py
server/app/models/: models.py
(+115 files in other folders)
